# parsnips

./: .gitignore  .parsnipsignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: check-same-version.yml  review-cff-authors-pr.yml
.parsnips/pdir_src/pdir_parsnips/pfile___init___py/EL0C0T1__Module/: node_metadata.json
.parsnips/pdir_src/pdir_parsnips/pfile_extractor_py/EL0C0T1__Module/: node_metadata.json
.parsnips/pdir_src/pdir_parsnips/pfile_main_py/EL0C0T1__Module/: node_metadata.json
.parsnips/pdir_src/pdir_parsnips/pfile_searcher_py/EL0C0T1__Module/: node_metadata.json
.parsnips/pdir_src/pdir_parsnips/pfile_swh_context_py/EL0C0T1__Module/: node_metadata.json
.parsnips/pdir_src/pdir_parsnips/pfile_swhid_py/EL0C0T1__Module/: node_metadata.json
.parsnips/pdir_src/pfile___init___py/EL0C0T1__Module/: node_metadata.json
.parsnips/pdir_tests/pfile___init___py/EL0C0T1__Module/: node_metadata.json
.parsnips/pdir_tests/pfile_test_cli_search_py/EL0C0T1__Module/: node_metadata.json
.parsnips/pdir_tests/pfile_test_cli_search_py/EL0C0T1__Module/EL10C0T16__ImportFrom/: node_metadata.json
.parsnips/pdir_tests/pfile_test_cli_search_py/EL0C0T1__Module/EL14C0T18__FunctionDef/: node_metadata.json
.parsnips/pdir_tests/pfile_test_cli_search_py/EL0C0T1__Module/EL1C0T2__Import/: node_metadata.json
.parsnips/pdir_tests/pfile_test_compute_swhid_py/EL0C0T1__Module/: node_metadata.json
.parsnips/pdir_tests/pfile_test_extractor_py/EL0C0T1__Module/: node_metadata.json
src/parsnips/: extractor.py  main.py  pretty_json_dumper.py  search.py  searcher.py  swh_context.py  swhid.py  utils.py
src/parsnips/extractors/: libcst_extractor.py  parsnips_extractor.py  parsnips_fragment.py  tree_sitter_extractor.py
src/parsnips/searchers/: parsnips_searcher.py
tests/: test_cli_search.py  test_compute_swhid.py  test_extractor.py
(+1984 files in other folders)
